--- a/ContagionSim/ContagionSim.vcxproj
+++ b/ContagionSim/ContagionSim.vcxproj
@@ -143,9 +143,13 @@
   <ItemGroup>
     <ClCompile Include="collision.cpp" />
     <ClCompile Include="disease.cpp" />
+    <ClCompile Include="log.cpp" />
     <ClCompile Include="movement.cpp" />
     <ClCompile Include="glviewer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="simpleCollision.cpp" />
+    <ClCompile Include="simpleDisease.cpp" />
+    <ClCompile Include="simpleMovement.cpp" />
     <ClCompile Include="simulation.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,10 +158,14 @@
     <ClInclude Include="factory.h" />
     <ClInclude Include="glviewer.h" />
     <ClInclude Include="disease.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="movement.h" />
     <ClInclude Include="param.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="simpleCollision.h" />
+    <ClInclude Include="simpleDisease.h" />
+    <ClInclude Include="simpleMovement.h" />
     <ClInclude Include="simulation.h" />
   </ItemGroup>
   <ItemGroup>
