--- a/ContagionSim/ContagionSim.vcxproj.filters
+++ b/ContagionSim/ContagionSim.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gridCollision.cpp">
+      <Filter>Source Files\plugins\collisions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="simulation.h">
@@ -118,6 +121,9 @@
     </ClInclude>
     <ClInclude Include="contagion.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gridCollision.h">
+      <Filter>Header Files\plugins\collisions</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
