--- a/ContagionSim/ContagionSim.vcxproj
+++ b/ContagionSim/ContagionSim.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="collision.cpp" />
     <ClCompile Include="disease.cpp" />
     <ClCompile Include="gridCollision.cpp" />
+    <ClCompile Include="hospitalDisease.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="movement.cpp" />
     <ClCompile Include="glviewer.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="glviewer.h" />
     <ClInclude Include="disease.h" />
     <ClInclude Include="gridCollision.h" />
+    <ClInclude Include="hospitalDisease.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="movement.h" />
     <ClInclude Include="param.h" />
