Moved initial Infected param into Disease. Moved minSpeed/maxSpeed into Movement.

--- a/ContagionSim/ContagionSim.vcxproj.filters
+++ b/ContagionSim/ContagionSim.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClInclude Include="hospitalDisease.h">
       <Filter>Header Files\plugins\diseases</Filter>
     </ClInclude>
+    <ClInclude Include="plugin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ContagionSim.rc">
