--- a/ContagionSim/ContagionSim.vcxproj
+++ b/ContagionSim/ContagionSim.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="log.h" />
     <ClInclude Include="movement.h" />
     <ClInclude Include="param.h" />
+    <ClInclude Include="plugin.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="simpleCollision.h" />
