--- a/ContagionSim/ContagionSim.vcxproj.filters
+++ b/ContagionSim/ContagionSim.vcxproj.filters
@@ -43,9 +43,6 @@
     <Filter Include="Resource Files\Params">
       <UniqueIdentifier>{795e34be-7105-4f01-9123-9981d1ceaf4e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files\Glut">
-      <UniqueIdentifier>{93c02037-07fc-4b40-8453-c8d41a2ee8a2}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -83,6 +80,9 @@
     </ClCompile>
     <ClCompile Include="hospitalDisease.cpp">
       <Filter>Source Files\plugins\diseases</Filter>
+    </ClCompile>
+    <ClCompile Include="run.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -143,8 +143,8 @@
     <ClInclude Include="log.h">
       <Filter>Header Files\utils</Filter>
     </ClInclude>
-    <ClInclude Include="Glut\glut.h">
-      <Filter>Resource Files\Glut</Filter>
+    <ClInclude Include="run.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -156,19 +156,5 @@
     <None Include="params\sim.params">
       <Filter>Resource Files\Params</Filter>
     </None>
-    <None Include="Glut\glut.dll">
-      <Filter>Resource Files\Glut</Filter>
-    </None>
-    <None Include="Glut\glut32.dll">
-      <Filter>Resource Files\Glut</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="Glut\glut.lib">
-      <Filter>Resource Files\Glut</Filter>
-    </Library>
-    <Library Include="Glut\glut32.lib">
-      <Filter>Resource Files\Glut</Filter>
-    </Library>
   </ItemGroup>
 </Project>
