--- a/ContagionSim/ContagionSim.vcxproj
+++ b/ContagionSim/ContagionSim.vcxproj
@@ -35,40 +35,46 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Wasm|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Wasm|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
+    <UseDebugLibraries>
+    </UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
@@ -180,12 +186,12 @@ echo Zipped $(OutDir)ContagionSim.zip</Command>
     <PostBuildEvent />
     <PostBuildEvent>
       <Command>copy  $(ProjectDir)Params\*.params  $(OutDir)
-copy  $(ProjectDir)Glut\*.dll  $(OutDir)
+copy  $(ProjectDir)libs\SDL2-2.0.12\lib\x86\*.dll  $(OutDir)
 "C:\Program Files\7-Zip\7z.exe" a -bso0 -bsp0 -xr!*.zip -xr!*.ipdb -xr!*.pdb -xr!*.iobj $(OutDir)ContagionSim.zip $(OutDir)\*.* 
 echo Zipped $(OutDir)ContagionSim.zip</Command>
     </PostBuildEvent>
     <PostBuildEvent>
-      <Message>Copy params and glut to output dir and zip</Message>
+      <Message>Copy params and sdl dll to output dir and zip</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Wasm|Win32'">
@@ -236,6 +242,13 @@ echo Zipped $(OutDir)ContagionSim.zip</Command>
       <AdditionalDependencies>Opengl32.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)libs\SDL2-2.0.12\lib\x64</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>copy  $(ProjectDir)Params\*.params  $(OutDir)
+copy  $(ProjectDir)libs\SDL2-2.0.12\lib\x64\*.dll  $(OutDir)
+"C:\Program Files\7-Zip\7z.exe" a -bso0 -bsp0 -xr!*.zip -xr!*.ipdb -xr!*.pdb -xr!*.iobj $(OutDir)ContagionSim.zip $(OutDir)\*.* 
+echo Zipped $(OutDir)ContagionSim.zip</Command>
+      <Message>Copy params and sdl dll to output dir and zip</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Wasm|x64'">
     <ClCompile>
@@ -275,7 +288,10 @@ echo Zipped $(OutDir)ContagionSim.zip</Command>
     <ClCompile Include="simpleMovement.cpp" />
     <ClCompile Include="simulation.cpp" />
     <ClCompile Include="window.cpp" />
-    <None Include="wasmMain.cpp" />
+    <None Include="wasmMain.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      </ExcludedFromBuild>
+    </None>
     <None Include="wasm_upload.bat" />
   </ItemGroup>
   <ItemGroup>
